--- a/project 1 version 2.0/index.html
+++ b/project 1 version 2.0/index.html
@@ -60,13 +60,13 @@
                         </div>
 
                         <p class="AXIT__subtitle">
-                            MODERN AXURE TEMPLATE FOR BEAUTIFUL <br>PROTOTYPES
+                            MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES
                         </p>
 
                         <div class="AXIT__separator"></div>
 
                         <div class="AXIT__text">
-                            Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit
                         </div>
 
                         <div class="AXIT__button">
@@ -102,7 +102,7 @@
                     <div class="footer-axit__title">Social Media</div>
                     <div class="footer-axit__text">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Aenean euismod bibendum laoreet.
+                            <br>Aenean euismod bibendum laoreet.
                     </div>
                 </div>
 
@@ -158,15 +158,20 @@
                         </div>
 
                         <div class="tab1__text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean 
-                            <br>euismod 
-                            <br>bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et 
-                            <br>viverra 
-                            <br>justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
-                            <br>penatibus et magnis dis parturient montes.
-                            <br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean 
-                            <br>euismod 
-                            <br>bibendum laoreet.
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean 
+                                <br>euismod 
+                                <br>bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et 
+                                <br>viverra 
+                                <br>justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
+                                <br>penatibus et magnis dis parturient montes.
+                            </p>
+                            <br>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean 
+                                <br>euismod 
+                                <br>bibendum laoreet.
+                            </p>
                         </div>
 
                         <a href="#Features" class="tab1__button">Download</a>
@@ -330,63 +335,75 @@
                     </div>
                 </div>
 
-                <div class="customers__content-bottom">
-                    <div class="customers__content">
+                <div class="customers__contanier-bottom">
+                    <div class="customers__content-bottom">
 
-                        <div class="customers__text">
-                            Lorem ipsum dolor sit amet, 
-                            <br>consectetur adipisicing elit. Doloribus 
-                            <br>accusamus expedita repellat similique 
-                            <br>odio aspernatur ex, architecto eaque 
-                            <br>quo suscipit.
+                        <input type="radio" name="r" id="r1">
+                        <input type="radio" name="r" id="r2" checked>
+                        <input type="radio" name="r" id="r3">
+
+                        <div class="customers__content slide1">
+                            <div class="customers__text">
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. Doloribus 
+                                accusamus expedita repellat similique 
+                                odio aspernatur ex, architecto eaque 
+                                quo suscipit.
+                            </div>
+
+                            <div class="customers__triangle"></div>
+
+                            <img src="./imgs/AXIT Customers/Davis.svg" alt="">
+
+                            <div class="customers__name">Davis Rhiel Madsen</div>
+
+                            <div class="customers__Manager">Manager</div>
                         </div>
 
-                        <div class="customers__triangle"></div>
 
-                        <img src="./imgs/AXIT Customers/Davis.svg" alt="">
+                        <div class="customers__content">
+                            <div class="customers__text">
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. Doloribus 
+                                accusamus expedita repellat similique 
+                                odio aspernatur ex, architecto eaque 
+                                quo suscipit.
+                            </div>
 
-                        <div class="customers__name">Davis Rhiel Madsen</div>
+                            <div class="customers__triangle"></div>
 
-                        <div class="customers__Manager">Manager</div>
-                    </div>
+                            <img src="./imgs/AXIT Customers/Jaydon.svg" alt="">
 
+                            <div class="customers__name">Jaydon Rosser</div>
 
-                    <div class="customers__content">
-                        <div class="customers__text">
-                            Lorem ipsum dolor sit amet, 
-                            consectetur adipisicing elit. Doloribus 
-                            accusamus expedita repellat similique 
-                            odio aspernatur ex, architecto eaque 
-                            quo suscipit.
+                            <div class="customers__Manager">Manager</div>
                         </div>
 
-                        <div class="customers__triangle"></div>
 
-                        <img src="./imgs/AXIT Customers/Jaydon.svg" alt="">
+                        <div class="customers__content">
+                            <div class="customers__text">
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. Doloribus 
+                                accusamus expedita repellat similique 
+                                odio aspernatur ex, architecto eaque 
+                                quo suscipit.
+                            </div>
 
-                        <div class="customers__name">Jaydon Rosser</div>
+                            <div class="customers__triangle"></div>
 
-                        <div class="customers__Manager">Manager</div>
-                    </div>
+                            <img src="./imgs/AXIT Customers/Cooper.svg" alt="">
 
+                            <div class="customers__name">Cooper Dorwart</div>
 
-                    <div class="customers__content">
-                        <div class="customers__text">
-                            Lorem ipsum dolor sit amet, 
-                            consectetur adipisicing elit. Doloribus 
-                            accusamus expedita repellat similique 
-                            odio aspernatur ex, architecto eaque 
-                            quo suscipit.
+                            <div class="customers__Manager">Manager</div>
                         </div>
-
-                        <div class="customers__triangle"></div>
-
-                        <img src="./imgs/AXIT Customers/Cooper.svg" alt="">
-
-                        <div class="customers__name">Cooper Dorwart</div>
-
-                        <div class="customers__Manager">Manager</div>
                     </div>
+                </div>
+                
+                <div class="navigation__customers">
+                    <label for="r1" class="button__check check1"></label>
+                    <label for="r2" class="button__check "></label>
+                    <label for="r3" class="button__check"></label>
                 </div>
             </div>
         </div>
